KIAction/manyaml/kubia-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kavu-gpu
spec:
  nodeSelector:
    foo: "bar"
  containers:
  - image: jayharts1/kubia
    name: kubia
