KIAction/manyaml/kavu-svc-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: kavu-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector: 
    tier: kavu
