KIAction/manyaml/kavu-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavu-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 30123
  selector:
    tier: kavu
