KIAction/manyaml/kavu-ingress.yaml
# did per the gce spec, but still does not appear to be working

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavu-ingress
spec:
  defaultBackend:
    service:
      name: test
      port:
        number: 80
